--- a/ui/EditParty2bdUI.ui
+++ b/ui/EditParty2bdUI.ui
@@ -26,7 +26,7 @@
     <string>Add Group</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="bd_remove_button">
+  <widget class="QPushButton" name="bd_abolish_button">
    <property name="geometry">
     <rect>
      <x>500</x>
@@ -36,7 +36,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Remove Group</string>
+    <string>Abolish Group</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
