--- a/ui/EconomyMainUI.ui
+++ b/ui/EconomyMainUI.ui
@@ -316,7 +316,7 @@
      <string>delete Healer</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="clerk_cid">
+   <widget class="QLineEdit" name="clerk_id">
     <property name="geometry">
      <rect>
       <x>190</x>
