#106 create kpi dataframes and plotly figs

--- a/ui/MainWindowUI.ui
+++ b/ui/MainWindowUI.ui
@@ -601,7 +601,7 @@
      <string>Day:</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="update_now_time_frame">
+   <widget class="QComboBox" name="update_now_time">
     <property name="geometry">
      <rect>
       <x>280</x>
